2017-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/avs.c (ReadAVSImage): Fix SourceForge issue #499 "memory
	leak in avs.c".

	* coders/cmyk.c (ReadCMYKImage): Fix SourceForge issue #498
	"memory leak in cmyk.c".

	* coders/cut.c (ReadCUTImage): Fix SourceForge issue #497 "memory
	leak in cut.c".

	* coders/dpx.c (ReadDPXImage): Fix SourceForge issue #496 "memory
	leak in dpx.c".

	* coders/hdf.c (ReadHDFImage): Fix SourceForge issue #495 "memory
	leak in hdf.c".

	* coders/pcx.c (ReadPCXImage): Fix SourceForge issue #494 "memory
	leak in pcx.c".

	* coders/pcd.c (ReadPCDImage): Fix SourceForge issue #493 "memory
	leak in ReadPCDImage".

	* coders/histogram.c (WriteHISTOGRAMImage): Fix SourceForge issue
	#492 "memory leak in WriteHISTOGRAMImage".

	* coders/gif.c (WriteGIFImage): Fix SourceForge issue #491 "memory
	leak in WriteGIFImage".

	* coders/fits.c (WriteFITSImage): Fix SourceForge issue #490
	"memory leak in WriteFITSImage".

	* coders/palm.c (WritePALMImage): Fix SourceForge issue #489
	"memory leak in WritePALMImage".

	* coders/rgb.c (ReadRGBImage): Fix SourceForge issue #488 "Memory
	leak in rgb.c".

	* coders/palm.c (ReadPALMImage): Fix SourceForge issue #487 "NULL
	pointer dereference in ReadPALMImage".

	* Magick++/lib/Options.cpp (strokeDashArray): Fix SourceForge
	issue #486 "NULL pointer dereference in
	Magick::Options::strokeDashArray".

	* magick/nt_feature.c (NTGetTypeList): Fix SourceForge issue #485
	"NULL pointer dereference in NTGetTypeList".

	* coders/sun.c (ReadSUNImage): Fix SourceForge issue #484 "Memory
	leak in sun.c".

	* coders/tim.c (ReadTIMImage): Fix SourceForge issue #483 "Memory
	leak in tim.c".

	* magick/nt_base.c (NTRegistryKeyLookup): Fix SourceForge issue
	#482 "NULL pointer dereference in NTRegistryKeyLookup".

	* coders/viff.c (ReadVIFFImage): Fix SourceForge issue #481
	"Memory leak in viff.c".

	* magick/profile.c (SetImageProfile): Fix SourceForge issue #480