@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170930"
-#define public MagickPackageReleaseDate "snapshot-20170930"
+#define public MagickPackageVersionAddendum ".020171001"
+#define public MagickPackageReleaseDate "snapshot-20171001"
